--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* HEADER */
 #fundo-com-imagem {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.5)), url("imagens descod/fundoPaginaInicial.jpg"); /*escurece imagem*/
+    rgba(0, 0, 0, 0.5)), url("home-page-background.jpg"); /*escurece imagem*/
     width: 100%;
     height: 483.17px;
 /*  border-bottom: 500px;
