--- a/na-midia.css
+++ b/na-midia.css
@@ -14,7 +14,7 @@ body {
 
 #fundo-com-imagem{
     background-image: linear-gradient(rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.5)), url("imagens descod/fundoPaginaNaMidia.jpg"); /*escurece imagem*/
+    rgba(0, 0, 0, 0.5)), url("na-midia-background.jpg"); /*escurece imagem*/
     background-size: cover;
     width: 100%;
     height: 483.17px;
