--- a/na-midia.css
+++ b/na-midia.css
@@ -4,7 +4,6 @@
     font-family: sans-serif; /*para se Roboto nao estiver disponível*/
     font-family: Roboto;
     font-weight: normal; /*padrao para h1 é negrito, entao o titulo estava ficando em negrito tb*/
-    margin-top: 0;
 }
 
 body {
@@ -12,16 +11,33 @@ body {
     margin: 0;
 }
 
-#fundo-com-imagem{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.5)), url("na-midia-background.jpg"); /*escurece imagem*/
-    background-size: cover;
-    width: 100%;
-    height: 483.17px;
-/*  border-bottom: 500px;
-    border-color:  rgba(12,128,121,1); */
-    z-index: -1; /*nao faz diferenca*/
+
+
+
+
+
+/*INICIO HEADER*/
+.carousel-slide {
+    height: 10%;
+/*     width: 100%;
+    height: 483.17px; */
+/*     border-bottom: 500px;
+    border-color:  rgba(12,128,121,1);  */
+/*  background-image: linear-gradient(rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.5)), url("home-page-background.jpg"); */ /*escurece imagem*/
 }
+
+#carrossel{
+    padding-top: none;
+    position: absolute; /*para que z-index funcione, position deve ser absolute - checar*/
+    z-index: -1;
+    width: 100%;
+}
+
+/*NAO CONSIGO AUMENTAR IMAGEM 1 OU DIMINUIR 2 E 3 */
+/* .carousel-inner {
+    height: 10%;
+} */
 
 #navbar {
     display: inline-flex; /*diferenca entre inline-flex e inline?*/
@@ -31,7 +47,7 @@ body {
     font-weight: bold; */
     justify-content: space-between; /*sem isso o text-align: left dos topicos nao funciona*/
     width: 100%;
-    height: 56px;
+    height: 10%;
     position: fixed;
     z-index: 1;
 /*  flex-direction: row; */
@@ -45,18 +61,18 @@ body {
 
 .logo {
     display: inline-flex;
-    width: 54.54px;
-    height: 45,36px;
+    height: 70%;
     text-align: left;
     padding: 5% 30%;
     box-sizing: content-box; /* default */
+    padding-top: 15%;
 }
 
 #texto-logo {
     display: inline-flex;
     position: relative;
     right: 145%;
-    font-size: 20px;
+    font-size: 200%;
     color: white;
 }
 
@@ -77,12 +93,14 @@ body {
     bottom: 10%;
     text-align: right;
     list-style-type: none; /*tira bolinha dos topicos*/
+    font-size: 130%;
+    padding-top: 5%;
 }
 
 .menu .topicos-menu a {
     padding-right: 10px;
     padding-left: 10px;
-    font-size: 16px;
+    font-size: 120%;
     color: white;
     font-weight: bolder;
     text-decoration: none; /* tira sublinhado default */
@@ -136,10 +154,9 @@ body {
 
 .searchbutton {
     position: absolute;
-	font-size: 30px;
+	font-size: 200%;
 	width: 100%;
 	margin: 0;
-	padding: 0;
 }
 
 .search:focus + .searchbutton {
@@ -184,8 +201,8 @@ body {
 
 #titulo-subtitulo {
     position: relative;
-    top: 35%;
-    padding: 0px;
+    top: 25%;
+    padding: 20%;
     color: white;
     text-align: center;
 
@@ -194,14 +211,22 @@ body {
 #titulo {
     font-size: 63pt;
     margin: auto;
-    padding-bottom: 30px;
+    padding: 10%;
+    font-size: 700%;
+    font-weight: bolder;
 }
 
 #subtitulo {
-    font-size: 21.3px;
+    font-size: 300%;
+    font-weight: bolder;
 }
 
-/* MAIN */
+header {
+    margin-bottom: 20%;
+}
+/*FIM HEADER*/
+
+/* INICIO MAIN */
 #midia-section {
     text-align: center;
 }
