--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     background-color:  #f5f5f5;
-    margin: 0; /*pq espaco de cima nao sai?*/ 
+    margin: 0;
 }
 
 /* img {
@@ -16,7 +16,7 @@ body {
     position: relative;
 } */
 
-/* HEADER */
+/* INICIO HEADER */
 .carousel-slide {
     height: 10%;
 /*     width: 100%;
@@ -38,7 +38,6 @@ body {
 /* .carousel-inner {
     height: 10%;
 } */
-
 
 #navbar {
     display: inline-flex; /*diferenca entre inline-flex e inline?*/
@@ -62,7 +61,6 @@ body {
 
 .logo {
     display: inline-flex;
-    width: ;
     height: 70%;
     text-align: left;
     padding: 5% 30%;
@@ -221,6 +219,7 @@ body {
     font-size: 300%;
     font-weight: bolder;
 }
+
 /*FIM HEADER*/
 
 /* INICIO MAIN */
@@ -230,7 +229,7 @@ body {
 }
 
 /*#entregas{
-    padding: 30px;
+    padding:;
 }*/
 
 
