--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ body {
 }*/
 
 
-#missao, #entregastitulo{
+#missao, #entregastitulo, #clientestitulo{
     font-size: 40px;
     text-align: center;
     margin: 70px;
@@ -264,6 +264,20 @@ body {
 
 #mapa {
     padding: 20px;
+}
+
+.flex-container { /*nao esta dando certo*/
+
+}
+
+.card {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-title {
+    font-weight: bold;
 }
 
 /* RODAPE */
