dropdown menu adicionado à pág index

--- a/na-midia.css
+++ b/na-midia.css
@@ -228,7 +228,7 @@ header {
 9-column lines and 9-row lines.
 
 The vertical lines 1 and 2 determine the start and end points of the first column. Lines 2 and 3 the second column and so on. Similarly, horizontal lines 1 and 2 determine the position of the first row, and lines 2 and 3 the second row and so on. Knowing the above concepts will help you understand how we are going to position items (images) on our grid. */
-.album {
+#album {
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(15,5vw); /* 5vw: 5% of viewport width  */
